# AmbientLed

./: .gitignore  Cargo.toml  README.md  WRITEUP.md  config.example.yml
arduino/: arduino.ino  build_arduino.sh
host/: Cargo.toml
host/src/: configuration.rs  connector.rs  main.rs  renderer.rs  screencopy.rs
host/src/connector/: device.rs  strip.rs
host/src/renderer/: env.rs  shaders.rs  textures.rs  vertices.rs
shaders/: basic_fragment.glsl  basic_vertex.glsl  default.frag  left_to_right.vert  rainbow.frag  right_to_left.vert  ws2812b.frag  ws2812b_3535smd.frag  ws2812e.frag
src/: configuration.c  configuration.rs  connector.rs  init.rs  main.rs  pi.rs  renderer.rs  screencopy.rs  util.rs
src/connector/: strip.rs
src/renderer/: env.rs  framebuffer.rs  shaders.rs  textures.rs  vertices.rs
