[package]
name = "ambient-led"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
colog = "1.3"
anyhow = "1.0"
wayland-client = "0.31"
wayland-egl = "0.32"
wayland-protocols = { version = "0.32", features = ["unstable", "client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
gbm = "0.15"
egls = "0.1"
gl = "0.14"
serial2 = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.11"
